--- a/android/app/src/main/res/drawable/widget_background.xml
+++ b/android/app/src/main/res/drawable/widget_background.xml
@@ -5,6 +5,7 @@
         android:startColor="#80000000"
         android:endColor="#80000000"
         android:angle="45"/>
+    <corners android:radius="12dp" />
     <stroke
         android:width="1dp"
         android:color="#FFFFD700" />
