--- a/android/app/src/main/res/xml/salah_widget_info.xml
+++ b/android/app/src/main/res/xml/salah_widget_info.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialLayout="@layout/salah_widget"
     android:minWidth="300dp"
-    android:minHeight="50dp"
-    android:updatePeriodMillis="1800000"
-    android:resizeMode="horizontal"
-    android:widgetCategory="home_screen" /> 
+    android:minHeight="80dp"
+    android:updatePeriodMillis="0"
+    android:initialLayout="@layout/salah_widget"
+    android:resizeMode="horizontal|vertical"
+    android:widgetCategory="home_screen"
+    android:previewLayout="@layout/salah_widget" /> 
