fix show next prayer name on the widget

--- a/android/app/src/main/res/layout/salah_widget.xml
+++ b/android/app/src/main/res/layout/salah_widget.xml
@@ -17,7 +17,7 @@
         android:gravity="center"
         android:padding="8dp"
         android:background="#FFFFD700"
-        android:text="Sonraki Vakte: --:--" />
+        android:text="Bilinmiyor vaktine kalan süre --:--" />
 
     <!-- Namaz Vakitleri -->
     <LinearLayout
